# pkhexcore-rs

./: Cargo.toml  README.md  azure-pipelines.yml  rustfmt.toml
.github/workflows/: ci.yml
src/: legality.rs  lib.rs  personal_info.rs  pkm.rs  util.rs
src/game/: enums.rs
src/game/enums/: ability.rs  ball.rs  flag.rs  game_version.rs  gc_version.rs  gender.rs  language_gc.rs  language_id.rs  move_type.rs  moves.rs  nature.rs  region_id.rs  species.rs  util.rs
src/game/enums/util/: macros.rs
src/legality/: tables.rs
src/legality/tables/: location.rs  tables_8.rs
src/pkm/: pk8.rs  strings.rs  util.rs
src/pkm/strings/: resources.rs  string_converter.rs
src/pkm/strings/resources/: char_zh.rs
src/pkm/util/: experience.rs  exptable.rs  macros.rs  pokecrypto.rs  pokedex.rs
src/pkm/util/tests/data/: Dracovish.pk8  Grookey.pk8  Orbeetle.ek8  Orbeetle.pk8
src/util/: bigendian.rs  bitconverter.rs  custom_read_write.rs  date.rs  dateutil.rs  flagutil.rs  macros.rs  packutil.rs  parserutil.rs
