[package]
name = "pkhexcore"
version = "0.1.0"
authors = ["Devin <devdevin541@gmail.com>", "Hector Mejia <caquillo722@gmail.com>"]
edition = "2018"

[dependencies]

time = { version = "0.2.23", default-features = false }
deku = { version = "0.10.0", default-features = false, features = ["alloc"] }
num_enum = "0.5.1"
