[package]
name = "pkhexcore"
version = "0.1.0"
authors = ["Devin <devdevin541@gmail.com>", "Hector Mejia <caquillo722@gmail.com>"]
edition = "2018"

[dependencies]

time = { version = "0.2.24", default-features = false }
deku = { version = "0.10.0", default-features = false, features = ["alloc"] }
num_enum = { version = "0.5.1", default-features = false }
hashbrown = { version = "0.9.1", default-features = false, features = ["inline-more", "ahash"] }
conquer-once = { version = "0.3.2", default-features = false }
bitconv = "0.1.3"
